<?xml version="1.0" encoding="utf-8"?>
<TableRow android:id="@+id/tableRow"
    android:background="#000000"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/columnId"
        android:text="@string/id"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:background="#FFFFFF"
        android:layout_span="1"
        android:textAlignment="center"
        android:padding="3dip"
        android:layout_margin="1dp"/>

    <TextView
        android:id="@+id/columnPlayer"
        android:textAlignment="center"
        android:layout_margin="1dp"
        android:padding="3dip"
        android:background="#FFFFFF"
        android:text="@string/player_name"
        android:layout_height="match_parent"
        android:textColor="@android:color/black"
        android:layout_span="1"/>

    <TextView
        android:id="@+id/columnTeam"
        android:background="#FFFFFF"
        android:textAlignment="center"
        android:padding="3dip"
        android:text="@string/team"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="1dp"
        android:layout_span="1"/>

    <TextView
        android:id="@+id/columnStatus"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:padding="3dip"
        android:text="@string/status"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="1dp"
        android:layout_span="1"/>

</TableRow>