<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_room"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:layout_height="match_parent"
    tools:context="hackathon_mobile_2016.randomio.activities.FindRoomActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.15"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:background="@mipmap/back_btn"
            android:layout_weight="0.05"
            android:scaleType="center"
            android:textAlignment="center"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:scaleY="0.35" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:hint="ID / Room Name"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:scaleY="0.55"
            android:layout_marginEnd="10dp"
            android:background="@mipmap/search_btn"/>

        <Button
            android:id="@+id/goToCreate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/create_room_btn"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/random_btn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.08">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:stretchColumns="*"
            android:background="#000000"
            android:id="@+id/tableWaiting">

            <TableRow
                android:id="@+id/tableRow"
                android:background="#000000"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/columnId"
                    android:text="@string/id"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:layout_height="match_parent"

                    android:textAlignment="center"
                    android:padding="3dip"
                    android:layout_margin="1dp"
                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/columnPlayer"
                    android:textAlignment="center"
                    android:layout_margin="1dp"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:padding="3dip"
                    android:text="@string/room_name"
                    android:layout_height="match_parent"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/columnTeam"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:padding="3dip"
                    android:text="@string/mode"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/columnStatus"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:padding="3dip"
                    android:text="@string/status"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.52">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <TableLayout
                android:id="@+id/tableRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="*"
                android:layout_marginBottom="1dp"
                android:background="#FFFFFF">
            </TableLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/mode_easy"
                android:background="#00C9F2"
                android:textColor="#FFFFFF"
                android:textStyle="normal|bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/mode_medium"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:background="#FFCB21" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/mode_hard"
                android:background="#FF4921"
                android:textStyle="normal|bold"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@mipmap/chat_btn"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>

    <!--1 4 2 6-->