<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_waiting_room"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hackathon_mobile_2016.randomio.activities.WaitingRoom"
    android:orientation="vertical"
    android:background="@mipmap/background2">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/backBtn"
            android:background="@mipmap/back_btn"
            android:layout_weight="0"
            android:scaleType="center"
            android:textAlignment="center"
            android:layout_height="40dp"
            android:layout_width="30dp"
            android:scaleY="0.35" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblIdRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/id_room"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:paddingLeft="10dp"
                android:layout_weight="0.8"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/txtIdRoom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/id_room_demo"
                android:layout_weight="0.2"
                android:textColor="@android:color/black"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/room"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:layout_weight="0.6"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtRoomName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/name_room_demo"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/team"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:layout_weight="0.4"
                android:textColor="@android:color/black" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:background="#FF0000"
                android:id="@+id/spinner"
                android:layout_weight="0.6" />

        </LinearLayout>

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_height="30dp"
            android:background="@mipmap/setting_btn"
            android:layout_weight="0"
            android:layout_width="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:background="#000000"
            android:id="@+id/tableWaiting">

            <TableRow
                android:id="@+id/tableRow"
                android:background="#000000"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView
                    android:id="@+id/columnId"
                    android:text="@string/id"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:layout_height="match_parent"

                    android:textAlignment="center"
                    android:padding="3dip"
                    android:layout_margin="1dp"
                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/columnPlayer"
                    android:textAlignment="center"
                    android:layout_margin="1dp"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:padding="3dip"
                    android:text="@string/player_name"
                    android:layout_height="match_parent"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="4"/>

                <TextView
                    android:id="@+id/columnTeam"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:padding="3dip"
                    android:text="@string/team"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/columnStatus"
                    android:background="#444444"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center"
                    android:padding="3dip"
                    android:text="@string/status"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:textStyle="normal|bold"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginBottom="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
                <TableLayout
                    android:id="@+id/tableRoomMember"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="*"
                    android:background="#000000">
                </TableLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/btnReady"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ready"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/chat_btn"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>
    <!--1 4 2 2-->